# plugin-python-template

./: .gitignore  README.md  manifest.toml  pyproject.toml  stencila-plugin.toml
src/plugin_example_python/: example.py  kernel.py  plugin.py  plugin_base.py  stencila_types.py  testing.py
src/plugin_python_template/: plugin.py
tests/: conftest.py  test_base.py  test_plugin.py
