[tool.poetry]
name = "plugin-example-python"
version = "0.1.0"
description = "A Stencila Plugin Example"
authors = ["Brett Calcott <brett@dragonfly.co.nz>"]
license = "Apache"
readme = "README.md"

[tool.poetry.scripts]
run_plugin = "plugin_example_python.example:run"

[tool.poetry.dependencies]
python = ">=3.10"
aiohttp = "^3.9.3"
cattrs = "^23.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"

[tool.pyright]
# Note: this requires making poetry put the venv in the project directory
# See the poetry.toml file.
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
  'F', # pyflakes
  'E', # codestyle
  # 'D',   # docstyle
  'W',   # warning
  'N',   # pep-naming
  'UP',  # upgrade
  'B',   # bug-bear
  'A',   # builtins
  'C4',  # comprehensions
  'PIE', # misc
  'ISC', # literal concat
  'PT',  # pytest
  'RET', # returns
  'SIM', # simplify
  'PTH', # use pathlib
  'Q',   # quotes
  'PLR', # refactor
  'PL',  # pylint errors
  'I',   # isort
  'TCH', # type checking import only
  'ANN', # annotations
  'PTH', # pathlib
  'RUF', # ruff
  'LOG', # logging
  'PYI', # python hints?
]

ignore = [
  'C408',   # Unnecessary dict call - I prefer the clarity of the dict call
  'A002',
  'RET504', # Unnecessary return statement. I prefer these for clarity.
  'D105',   # Missing docstring in magic method
  'ANN101', # Missing type annotation for self
  'ANN102', # Missing type annotation for classmethod
  'ANN204', # Missing type annotation for specical function
  'ANN201', # Missing return type annotation
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".


[tool.ruff.lint.per-file-ignores]
# Care less about docs and code in tests.
"tests/**/*.py" = ['PLR', 'D']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
