[project]
authors = [{ name = "Brett Calcott", email = "brett@dragonfly.co.nz" }]
license = { text = "Apache" }
requires-python = ">=3.10"
dependencies = ["stencila-plugin>=2.0.0a33"]
name = "plugin-python-template"
version = "0.1.0"
description = "A Template Repo for Stencila Plugin in Python"
readme = "README.md"

[project.scripts]
run_plugin = "plugin_python_template.plugin:run"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
  "pytest<9.0.0,>=8.0.2",
  "pytest-asyncio<1.0.0,>=0.23.5",
  "pyright<2.0.0,>=1.1.355",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
# Note: this requires making poetry put the venv in the project directory
# See the poetry.toml file.
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
  'F',   # pyflakes
  'E',   # codestyle
  'W',   # warning
  'N',   # pep-naming
  'UP',  # upgrade
  'B',   # bug-bear
  'A',   # builtins
  'C4',  # comprehensions
  'PIE', # misc
  'ISC', # literal concat
  'PT',  # pytest
  'RET', # returns
  'SIM', # simplify
  'PTH', # use pathlib
  'Q',   # quotes
  'PLR', # refactor
  'PL',  # pylint errors
  'I',   # isort
  'TCH', # type checking import only
  'ANN', # annotations
  'PTH', # pathlib
  'RUF', # ruff
  'LOG', # logging
  'PYI', # python hints?
]

ignore = [
  'C408',   # Unnecessary dict call - I prefer the clarity of the dict call
  'RET504', # Unnecessary return statement. I prefer these for clarity.
  'D105',   # Missing docstring in magic method
  'ANN101', # Missing type annotation for self
  'ANN102', # Missing type annotation for classmethod
  'ANN204', # Missing type annotation for specical function
  'ANN201', # Missing return type annotation
  'N812',
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint.per-file-ignores]
# Care less about docs and code in tests.
"tests/**/*.py" = ['PLR', 'D']
